source/blender/makesrna/intern/rna_scene.c
@@ -1828,11 +1828,8 @@ void rna_ViewLayer_pass_update(Main *bmain, Scene *activescene, PointerRNA *ptr)
 {
   Scene *scene = (Scene *)ptr->owner_id;
 
-  if (scene->nodetree) {
-    ntreeCompositUpdateRLayers(scene->nodetree);
-  }
-
   ViewLayer *view_layer = NULL;
+
   if (ptr->type == &RNA_ViewLayer) {
     view_layer = (ViewLayer *)ptr->data;
   }
@@ -1855,6 +1852,10 @@ void rna_ViewLayer_pass_update(Main *bmain, Scene *activescene, PointerRNA *ptr)
       RE_engine_free(engine);
       engine = NULL;
     }
+  }
+
+  if (scene->nodetree) {
+    ntreeCompositUpdateRLayers(scene->nodetree);
   }
 
   rna_Scene_render_update(bmain, activescene, ptr);
