source/blender/makesrna/intern/rna_scene.cc
@@ -1861,10 +1861,6 @@ void rna_ViewLayer_pass_update(Main *bmain, Scene *activescene, PointerRNA *ptr)
 {
   Scene *scene = (Scene *)ptr->owner_id;
 
-  if (scene->nodetree) {
-    ntreeCompositUpdateRLayers(scene->nodetree);
-  }
-
   ViewLayer *view_layer = nullptr;
   if (ptr->type == &RNA_ViewLayer) {
     view_layer = (ViewLayer *)ptr->data;
@@ -1888,6 +1884,10 @@ void rna_ViewLayer_pass_update(Main *bmain, Scene *activescene, PointerRNA *ptr)
       RE_engine_free(engine);
       engine = nullptr;
     }
+  }
+
+  if (scene->nodetree) {
+    ntreeCompositUpdateRLayers(scene->nodetree);
   }
 
   rna_Scene_render_update(bmain, activescene, ptr);
